[tool.poetry]
name = "kaggle-titanic-conformal-prediction"
version = "0.1.0"
description = ""
authors = ["Paul-J-Wissler"]
readme = "README.md"
packages = [{include = "kaggle_titanic_conformal_prediction"}]

[tool.poetry.dependencies]
python = "^3.11"
plotnine = "^0.13.6"
jupyter = "^1.0.0"
pandas = "^2.2.2"
mapie = "^0.8.3"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
